--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 html,
 body {
@@ -7,7 +7,8 @@ body {
   height: 100vh;
   background: rgb(39 39 42);
   color: #d4d4d8;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  /*font-family: 'Ubuntu', Arial, sans-serif;*/
+  font-family: 'Times New Roman', serif;
 }
 
 *,
