--- a/src/global.css
+++ b/src/global.css
@@ -281,6 +281,6 @@ article,
 }
  
 ::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
+  background-color: #424242;
+  outline: 0px solid #424242;
 }
